# Bot-Shock

./: .gitignore  .pre-commit-config.yaml  DEVICE_WORN_FEATURE.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  README_REFACTORING.md  TERMS.md  pyproject.toml  pytest.ini  requirements.txt
botshock/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py
botshock/cogs/: action_logs.py  controller_commands.py  controller_preferences.py  core_commands.py  event_listeners.py  reminder_commands.py  settings.py  shock_command.py  trigger_commands.py  user_commands.py
botshock/core/: __init__.py  bot.py  bot_protocol.py  database.py
botshock/scripts/: __init__.py  generate_key.py
botshock/services/: api_client.py  reminder_scheduler.py  trigger_manager.py
botshock/utils/: __init__.py  command_helpers.py  data_models.py  decorators.py  encryption.py  formatters.py  logger.py  modals.py  permissions.py  recurrence.py  response_handler.py  time_parser.py  validators.py  views.py
docs/: COMMANDS.md  CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
tests/: README.md  conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_api_client.py  test_bot.py  test_command_helpers_more.py  test_config.py  test_formatters_more.py  test_permissions.py  test_reminder_scheduler.py  test_reminders_db.py  test_time_parser.py  test_utils.py  test_validators_more.py
